# obayebar

./: Cargo.toml  README.md  TODO.md  flake.nix
.cargo/: config.toml
.claude/: settings.local.json
nix/: default.nix  hm-module.nix  overlay.nix
src/: config.rs  lib.rs  main.rs  panel.rs  style.rs  xdg.rs
src/bar/: active_window.rs  audio_panel.rs  battery_panel.rs  bluetooth_panel.rs  clock.rs  gitlab.rs  gitlab_panel.rs  logo.rs  mod.rs  network_panel.rs  power.rs  status.rs  sysinfo_panel.rs  tray.rs  widgets.rs  workspaces.rs
src/launcher/: desktop_entry.rs  mod.rs
src/notifications/: center.rs  daemon.rs  mod.rs  popup.rs
src/services/: audio.rs  battery.rs  bluetooth.rs  dbus_util.rs  gitlab.rs  hyprland.rs  mod.rs  network.rs  notifications.rs  sysinfo.rs  timers.rs  tray.rs
