cargo-features = ["codegen-backend"]

[package]
name = "obayebar"
version = "0.1.0"
edition = "2021"
description = "Wayland status bar inspired by caelestia-shell"
license = "MIT"
repository = "https://github.com/obayemi/obayebar"
readme = "README.md"
keywords = ["wayland", "bar", "status-bar", "hyprland"]
categories = ["gui"]
default-run = "obayebar"

[lib]
name = "obayebar"
path = "src/lib.rs"

[[bin]]
name = "obayebar"
path = "src/main.rs"

[[bin]]
name = "obayebar-launcher"
path = "src/bin/launcher.rs"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["wgpu", "crisp", "linux-theme-detection", "wayland", "tokio", "canvas", "image-without-codecs", "lazy"] }
iced_layershell = "0.18.0-beta1"
iced_runtime = "0.14.0"
tokio = { version = "1.52.1", features = ["full"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
futures-util = "0.3.32"
log = "0.4.29"
env_logger = "0.11.10"
async-channel = "2.5.0"
ab_glyph = "0.2"
pipewire = "0.9.2"
wayland-backend = { version = "0.3", features = ["log"] }
tokio-stream = "0.1.18"
nvml-wrapper = "0.12.1"
fontdb = "0.23.0"
fuzzy-matcher = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
resvg = "0.47.0"
reqwest = { version = "0.12.21", default-features = false, features = ["rustls-tls", "json", "gzip"] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "warn"
# transitive dependency version conflicts are not fixable in our code
multiple_crate_versions = "allow"

[profile.dev]
codegen-backend = "cranelift"

# Fork of iced_layershell with an opt-out for clipboard init
# (env var ICED_LAYERSHELL_NO_CLIPBOARD). The bar sets the env var to
# skip spawning the always-on smithay-clipboard worker thread.
[patch.crates-io]
iced_layershell = { git = "https://github.com/obayemi/exwlshelleventloop", branch = "feat/allow-clipboard-opt-out" }
